# rmcs_laser_guidance

./: .coderabbit.yaml  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  plan.md  voltage_records.csv  voltage_records_merged.csv  voltage_records_merged_v4.csv  voltage_records_merged_v5.csv  voltage_records_merged_v6.csv
.github/workflows/: run-test.yml
.script/: competition  preview  preview.sh  record  scan-camera.sh  set-config  set-config.sh  stop  stream  stream.sh  ugreen-visualcamera.sh
apps/: hikcamera_preview.cpp
config/: calib_guidance.yaml  camera_calib.yaml  capture_red_20m.yaml  default.yaml  direct_voltage_calib.yaml  direct_voltage_run.yaml  direct_voltage_run_lut_v1.yaml
docs/: README.md  architecture.md  dataset_collection.md  development.md  hardware_ft4222_dac8568.md  model_contract.md  model_validation.md  ros2_interface.md  runtime-metrics.md  runtime_operations.md  tensorrt-commands.md  ws30_lidar.md
examples/: detector_benchmark.cpp  example_export_training_frames.cpp  example_support.hpp  example_v4l2_record_session.cpp  export_training_frames.cpp  model_infer.cpp  offline_smoke.cpp  replay_preview.cpp  transcode_recorded_session.cpp  v4l2_capture.cpp  v4l2_preview.cpp  v4l2_record_session.cpp
include/: config.hpp  laser_guidance.hpp  types.hpp
models/: README.md  vision_voltage_lut.example.yaml  vision_voltage_lut_v1.yaml  vision_voltage_poly_v1.yaml  vision_voltage_poly_v2.yaml  vision_voltage_poly_v3.yaml  vision_voltage_poly_v4.yaml  vision_voltage_poly_v5.yaml  vision_voltage_poly_v6.yaml  vision_voltage_poly_v7.yaml  vision_voltage_poly_v9.yaml
ros2/ws30_lidar_bridge/: CMakeLists.txt  package.xml
ros2/ws30_lidar_bridge/launch/: ws30_lidar.launch.py
ros2/ws30_lidar_bridge/src/: ws30_lidar_node.cpp
rviz/: ws30_lidar.rviz
scripts/: train_voltage_lut.py  train_voltage_poly.py
src/: config.cpp  debug_renderer.cpp  ekf_tracker.cpp  model_adapter.cpp  model_infer.cpp  model_runtime.cpp  pipeline.cpp  red_target_refiner.cpp  rtp_streamer.cpp  training_data.cpp  udp_sender.cpp  v4l2_capture.cpp  video_shm.cpp
src/capture/: v4l2_capture.cpp  v4l2_capture.hpp  ws30_capture_log.cpp  ws30_capture_log.hpp  ws30_client.cpp  ws30_client.hpp  ws30_frame_assembler.cpp  ws30_frame_assembler.hpp  ws30_packet_parser.cpp  ws30_packet_parser.hpp  ws30_pcd_writer.cpp  ws30_pcd_writer.hpp  ws30_types.hpp
src/core/: config.cpp  debug_renderer.cpp  debug_renderer.hpp  frame_format.cpp  frame_format.hpp  pipeline.cpp  replay.cpp  replay.hpp
src/guidance/: camera_projection.cpp  camera_projection.hpp  depth_estimator.cpp  depth_estimator.hpp  galvo_driver.cpp  galvo_driver.hpp  galvo_kinematics.cpp  galvo_kinematics.hpp  guidance_pipeline.cpp  guidance_pipeline.hpp  voltage_mapper.cpp  voltage_mapper.hpp
src/internal/: debug_renderer.hpp  ekf_tracker.hpp  hit_state.hpp  mock_runtime.hpp  model_adapter.hpp  model_infer.hpp  model_runtime.hpp  red_target_refiner.hpp  rtp_streamer.hpp  runtime_metrics.hpp  stale_policy.hpp  training_data.hpp
src/io/: ft4222_spi.cpp  ft4222_spi.hpp  ws30_udp.cpp  ws30_udp.hpp
src/streaming/: rtp_streamer.cpp  udp_sender.cpp  udp_sender.hpp  video_shm.cpp  video_shm.hpp
src/tracking/: ekf_tracker.cpp  ekf_tracker.hpp  freshness_queue.hpp  hit_progress.cpp  hit_progress.hpp
src/vision/: cuda_runtime_api.h  detector.cpp  detector.hpp  mock_runtime.hpp  model_adapter.cpp  model_adapter.hpp  model_infer.cpp  model_infer.hpp  model_runtime.cpp  model_runtime.hpp  tensorrt_engine.cpp  tensorrt_engine.hpp  training_data.cpp
test_data/calib/: geometry_calib_records.csv  voltage_records.csv  voltage_records_merged_v3.csv
tests/: config_test.cpp  ekf_tracker_test.cpp  hit_state_test.cpp  mock_runtime_test.cpp  model_infer_test.cpp  pipeline_test.cpp  red_target_refiner_test.cpp  runtime_metrics_test.cpp  test_utils.hpp  training_data_test.cpp
tests/capture/: ws30_capture_log_test.cpp  ws30_frame_assembler_test.cpp  ws30_packet_parser_test.cpp  ws30_pcd_writer_test.cpp
tests/core/: config_test.cpp  debug_renderer_test.cpp  frame_format_test.cpp  pipeline_test.cpp  sample_images_test.cpp
tests/guidance/: camera_projection_test.cpp  depth_estimator_test.cpp  galvo_kinematics_test.cpp  voltage_mapper_poly_test.cpp  voltage_mapper_test.cpp
tests/tracking/: ekf_tracker_test.cpp  freshness_queue_test.cpp  hit_progress_test.cpp  hit_state_test.cpp  runtime_metrics_test.cpp
tests/vision/: detector_test.cpp  mock_runtime_test.cpp  model_adapter_test.cpp  model_infer_test.cpp  training_data_test.cpp
tools/: calib_solve.cpp  calibrate.cpp  capture.cpp  competition.cpp  dac8568_smoke.cpp  detector_benchmark.cpp  example_support.hpp  export.cpp  galvo_smoke.cpp  guidance.cpp  lidar_dump.cpp  model_infer.cpp  preview.cpp  record.cpp  replay.cpp  transcode.cpp
